# C-Project

./: CMakeLists.txt  DataStructures.c  Main.c  Main.cpp
C/: GuiInterface.h  GuiTypes.h
C/Projects/Chess/: ChessGame.c  ChessGame.h
C/Projects/ChessNewandImproved/: ChessBetter2.c  ChessBetter2.h
C/Projects/TFE/: TFE.c  TFE.h
C/Projects/Test/: TestGUI.c  TestGUI.h
C/Projects/Tokenizer/: Calculator.c  Calculator.h
C/Render/: ComputeShader.c  ComputeShader.h  Engine.c  Engine.h  Render.c  Render.h  Shader.c  Shader.h
C/Render/Drawing/: Batcher.c  Batcher.h  Mesh.c  Mesh.h  Render.c  Render.h  RenderTypes.h  TextDisplaying.c  TextDisplaying.h
C/Render/GUI/: CallbackFunctions.c  CallbackFunctions.h  GuiElement.c  GuiElement.h  GuiElementData.c  GuiElementData.h  Mesh.c  Mesh.h  Tasks.c  Tasks.h  TextDisplaying.c  TextDisplaying.h  Texture.c  Texture.h  Update.c  Update.h
C/Shader/: GuiRender.frag  GuiRender.vert  GuiVertexShader.vert  TextRender.frag  TextRender.vert
C/Utils/: CArrayList.c  CArrayList.h  CString.c  FileIO.c  FileIO.h  HashMap.h  Makros.h  Matrix.h  Network.c  Network.h  StringBuilder.h  TimeMeasurenments.c  UtilityFun.h  Vector.c  Vector.h
Cpp/: GameEngine.cpp  GameEngine.h  GameEngine.hpp
Cpp/Engine/: CommandParser.cpp  CommandParser.hpp  CommandRegistry.cpp  CommandRegistry.hpp  LayerStack.cpp  LayerStack.hpp  Scene.cpp  Scene.hpp  Task.cpp  Task.hpp
Cpp/Engine/Core/PhysixBox/: PhysicsSystem.hpp  PointMass.cpp  PointMass.hpp  SoftBody2D.cpp
Cpp/Engine/Core/PhysixBox2D/: Collision.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PointMass.hpp  SoftBody2D.cpp  SoftBody2D.hpp
Cpp/Engine/Debug/: Logger.cpp  Logger.hpp
Cpp/Games/: BaseGame.cpp  BaseGame.h  IGame.h  IGame.hpp  IGameLayer.hpp
Cpp/Games/BaseGame/: BaseGame.cpp  BaseGame.hpp  GameGui.c  GameGui.h  GuiTasks.cpp  GuiTasks.hpp
Cpp/Games/BaseGame/Layers/: GameLayer.cpp  GameLayer.hpp  RenderLayer.cpp  RenderLayer.hpp
Cpp/Games/Controller/: Player.cpp  Player.hpp
Cpp/Games/DefaultLayer/: ObjectHandler3D.cpp  ObjectHandler3D.hpp  PhysicsHandler.cpp  PhysicsHandler.hpp  PhysicsHandler3D.cpp  PhysicsHandler3D.hpp  RenderLayer.cpp  RenderLayer.hpp  RenderLayer2D.cpp  RenderLayer2D.hpp  RenderLayer3D.cpp  RenderLayer3D.hpp  Renderer3D.hpp
Cpp/Games/Game2D/: Game2D.cpp  Game2D.hpp
Cpp/Games/Scene/: IScene.hpp  LayerStack.cpp  LayerStack.hpp  Scene.cpp  Scene.hpp  Scene3D.cpp  Scene3D.hpp
Cpp/Games/Scene/2D/: Scene2D.cpp  Scene2D.hpp
Cpp/Games/Scene/3D/: Scene3D.cpp  Scene3D.hpp
Cpp/Games/Scene/Services/: IRender2DProvider.hpp
Cpp/Render/: Screen.cpp  Screen.h  Screen.hpp  Window.cpp  Window.h
Cpp/Render/Geometry/: Mesh.cpp  Mesh.h
Cpp/Render/IO/: Input.cpp  Input.h  Input.hpp
Cpp/Render/Objects/: GameObject.cpp  GameObject.hpp  Object.cpp  Object.h  Object.hpp
Cpp/Render/Objects/Behaviors/: IBehavior.hpp  TestBeahvior.cpp  TestBehavior.hpp
Cpp/Render/Objects/Geometry/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Mesh.hpp  Texture.cpp  Texture.h
Cpp/Render/Objects/Loader/: OBJLoader.cpp  OBJLoader.h  OBJLoader.hpp  ObjLoader.cpp
Cpp/Render/Objects/Objects2D/: GameObject2D.cpp  GameObject2D.hpp  RenderObject2D.cpp  RenderObject2D.hpp
Cpp/Render/Objects/Physics/: Collider.cpp  Collider.hpp  PhysicsFactory.cpp  PhysicsFactory.hpp  PhysicsHandler3D.cpp  PhysicsHandler3D.hpp  PhysicsObject.cpp  PhysicsObject.hpp  PhysicsObjectRef.cpp  PhysicsObjectRef.hpp  PhysicsObject_old.cpp  PhysicsObject_old.hpp
Cpp/Render/Objects/Primitives/: Cube.cpp  Cube.h
Cpp/Render/Objects/Render/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderObject.cpp  RenderObject.hpp  RenderObject3D.cpp  RenderObject3D.hpp  RenderObjectRef3D.hpp  Renderer3D.cpp  Texture.cpp  (+2 more)
Cpp/Render/Shader/: DeferredShader.cpp  DeferredShader.hpp  Shader.cpp  Shader.h  Shader.hpp
Cpp/Render/Transformation/: Camera.cpp  Camera.h  Camera.hpp  Transformation.cpp  Transformation.h
Cpp/Test/: ClosingBrace.cpp  JoltTest.cpp  Test.cpp  Test.hpp
Cpp/Utils/: FileIO.cpp  FileIO.hpp  Time.cpp  Time.hpp  Utils.cpp  Utils.h  Utils.hpp
Cpp/Utils/DataStorage/: ArrayList.h  ArrayList.hpp  InlineVector.hpp  SparseSet.hpp
Cpp/Utils/Math/: Matrix.cpp  Matrix.h  Matrix.hpp  Quaternion.h  Quaternion.hpp  Vector.cpp  Vector.h  Vector.hpp  ggmdef.hpp
Cpp/Utils/ggmLib/: ArrayList.h  ggmdef.h
Dependencies/RustGame/: TFE.h  game.dll.lib
Dependencies/include/CLAY/: Clay.h
Dependencies/include/glad/: gl.h
Dependencies/include/stb/: stb_image.h
Projects/CLAY_Test/: Clay_Test.c  Clay_Test.h
Projects/Chess/: ChessGame.c  ChessGame.h
Projects/Chess New and Improved/: Chess V.2.c  ChessBetter2.c
Projects/ChessNewandImproved/: ChessBetter2.c  ChessBetter2.h
Projects/Test/: TestGUI.c
Projects/Tokenizer/: Calculator.c  Calculator.h
Render/: CRenderInterface.h  CallbackFunctions.c  CallbackFunctions.h  ComputeShader.c  ComputeShader.h  Engine.c  Engine.h  Graphing.c  Graphing.h  GuiElement.c  GuiElement.h  Mesh.c  Mesh.h  Render.c  Render.h  Shader.c  Shader.h  TestGUI.c  TestGUI.h  Texture.c  Texture.h
Render/GUI/: BatchedRendering.c  BatchedRendering.h  CallbackFunctions.c  CallbackFunctions.h  Font.c  Font.h  GuiElement.c  GuiElement.h  GuiElementData.c  GuiElementData.h  Mesh.c  Mesh.h  Tasks.c  Tasks.h  TextDisplaying.c  TextDisplaying.h  Texture.c  Texture.h
Resources/Objects/ground_plane/: ground_plane.mtl
Rust/: Cargo.toml
Rust/src/: lib.rs  main.rs
Rust/src/game/: game_board.rs
Shader/: GraphingShader.comp  GraphingShader.comp.glsl  GuiFragmentShader.frag  GuiRender.frag  GuiRender.vert  GuiVertexShader.vert  TextRender.frag  TextRender.vert
Shader/ArtShader/: ColorShader.frag  ColorShader.vert
Utils/: ArrayList.h  CString.c  CString.h  DataStructures.c  DataStructures.h  FileIO.c  FileIO.h  GenericLinkedList.c  GenericLinkedList.h  HashMap.h  Makros.h  Map.h  Mathematics.c  Mathematics.h  MemoryArena.c  MemoryArena.h  Network.c  Network.h  SimpleArray.h  String.c  String.h  StringBuilder.c  StringBuilder.h  TimeMeasurenments.c  TimeMeasurenments.h  UtilityFun.c  Vector.c  Vector.h
(+22 files in other folders)
